first content push

--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -27,6 +27,13 @@
     }
 }
 
+.infraforyoursoftware {
+    font-size: xx-large;
+    text-align: center;
+
+
+}
+
 .sameold {
     font-size: xx-large;
     text-align: center;
