--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,152 +13,82 @@
     </section>
     <section class="container">
         <article id="innovation" class="lg gradient-1 cols col-2">
-            <figure><img alt="cube" src="/img/mainpage/cubes.png"></figure>
+            <figure><img alt="cube" src="/img/mainpage/cubes.png" width="300" height="100"></figure>
             <div>
                 <h2><strong class="text-primary">TLDR</strong></h2>
-                <p>P2PCoud integrates blockchain and Trusted Execution Environment
-                    technologies (TEE).</p>
-                <p>VMs are encrypted end-to-end, including RAM and CPU registers.
-                    QoS data is verifiable on the blockchain. Clients don't have to
-                    trust the hosting provider.</p>
-                <p>That creates a new Cloud market as an alternative to the current
-                    oligopoly.</p>
+                <p>
+                    P2P Cloud is your one-stop-shop for decentralized infrastructure. With our platform, you get the benefits of the cloud, without compromising on security, privacy, or ownership.
+                </p>
             </div>
         </article>
     </section>
-    <h2 id="promo-video" class="text-center">P2PCloud in <strong class="text-primary">60 seconds</strong></h2>
+    <h2 id="promo-video" class="text-center">P2P Cloud in <strong class="text-primary">60 seconds</strong></h2>
     <section class="container">
-        <div style="--aspect-ratio:1.76991;"><iframe title="October 28, 2022" frameborder="0" allowfullscreen="" src="https://www.youtube.com/embed/iJrVOTX2jC4?autoplay=$0&amp;rel=0"
+        <div style="--aspect-ratio:1.76991;"><iframe title="October 28, 2022" width="1000" height="500" allowfullscreen="" src="https://www.youtube.com/embed/iJrVOTX2jC4?autoplay=$0&amp;rel=0"
                 allow="autoplay; picture-in-picture; clipboard-write"></iframe></div>
     </section>
-    <menu>
-        <nav class="cols"><a href="#"><i class="icon icon-upward"></i> </a><a href="#how-it-works"> How it works </a><a href="#marketplace"> Open marketplace </a><a href="#concept"> Concept </a><a
-                href="#book"> Book </a></nav>
-    </menu>
-    <h2 id="how-it-works" class="text-center">How it <strong class="text-primary">works</strong></h2>
-    <section class="container">
-        <ol class="cols col-2">
-            <li>
-                <article class="lg gradient-1">
-                    <h3>Book</h3>
-                    <p>Book a VM on the blockchain. Choose by price, reliability,
-                        resources, and location</p>
-                    <figure><img alt="cube" src="/img/mainpage/offer.svg"></figure>
-                </article>
-            </li>
-            <li>
-                <article class="lg gradient-1">
-                    <h3>Encrypt</h3>
-                    <p>Encrypt a drive with LUKS and send it via IPFS. Bring your
-                        own key (BYOK).</p>
-                    <figure><img alt="cube" src="/img/mainpage/vm.svg"></figure>
-                </article>
-            </li>
-            <li>
-                <article class="gradient-1">
-                    <h3>Confirm</h3>
-                    <p>During attestation, the hosting provider cryptographically
-                        proves that you are the only person with access to the VM</p>
-                    <figure><img alt="cube" src="/img/mainpage/env.svg"></figure>
-                </article>
-            </li>
-            <li>
-                <article class="lg gradient-1">
-                    <h3>Launch</h3>
-                    <p>Deliver your VPN keys and other secret info for launch
-                        through the attested secure channel</p>
-                    <figure><img alt="cube" src="/img/mainpage/vpn.svg"></figure>
-                </article>
-            </li>
-            <li>
-                <article class="lg gradient-1">
-                    <h3>Use</h3>
-                    <p>Use it as regular VM. Treat p2pcloud's virtual machine as a
-                        regular VM from AWS or DigitalOcean. The performance penalty
-                        for end-to-end encryption is less than 10%.</p>
-                    <figure><img alt="cube" src="/img/mainpage/use.svg"></figure>
-                </article>
-            </li>
-        </ol>
-    </section>
-    <h3 class="sameold">Same old software on
-        <strong class="text-primary">decentralized infrastructure</strong>
+    <h2 id="how-it-works" class="text-center">What Makes P2P Cloud<strong class="text-primary">Unique</strong></h2>
+
+    <h3 class="sameold">Decentralized infrastructure
+        <strong class="text-primary">for your software</strong>
     </h3>
     <section class="container">
-        <figure><img src="/img/mainpage/oldsoft.svg" alt="oldsoft">
-            <caption class="article gradient-1">
-                <p>P2PCloud virtual machines are just regular Linux boxes on
-                    decentralized infrastructure encrypted to the teeth.</p>
-                <p>Deploy a crypto node, NodeJS full-stack app, or 20-year-old Java
-                    application. It is just a Linux VM in the end.</p>
-                <p>Supported distros are Ubuntu 22.04 and Alpine 3.16.</p>
-            </caption>
+        <figure>
+            <img src="/img/mainpage/oldsoft.svg" alt="oldsoft">
+            <figcaption class="article gradient-1">
+                P2P Cloud virtual machines are just regular Linux boxes – but with a difference. We use state-of-the-art encryption and decentralized infrastructure to keep your data secure and private. 
+                <br>
+                <br>
+                Deploy a crypto node, NodeJS full-stack app, or 20-year-old Java application – it's just a Linux VM in the end. Our supported distros are Ubuntu 22.04 and Alpine 3.16.
+            </figcaption>
         </figure>
+    </section>
+    
     </section>
     <h2 id="marketplace">Open <strong class="text-primary">marketplace</strong></h2>
     <section class="container">
         <p class="text-larger">The Big Tech trio (Amazon, Google, and Microsoft) controls 65% of the
-            market and dictates the prices. P2PCloud is an open marketplace platform
+            market and dictates the prices. P2P Cloud is an open marketplace platform
             with direct competition. Full encryption and blockchain make open
             competition possible.</p>
-        <!-- <ul class="cols col-3">
-            <li>
-                <p>Ooops! We loaded list of offers successfuly, but there is
-                    not offers with availability.</p>
-            </li>
-        </ul> -->
         <p><span>Every booking, every complaint on hosting provider is on the
                 blockchain, accessible on the ledger.</span></p>
     </section>
-    <section>
-        <article class="lg gradient-2 cols col-2 container">
-            <h2>Join our community<br>
-                in <strong class="text-primary">Telegram</strong></h2>
-            <div>
-                <p>Join our movement of changing the current cloud market</p>
-                <nav class="cols middle"><a class="button lg primary" href="/docs/overview/getting-started">Get started</a> <a class="button lg link svg" href="http://t.me/p2pcloud"><a id="tg"
-                            title="Join us in telegram" href="http://t.me/p2pcloud" target="explorer"><svg xmlns="http://www.w3.org/2000/svg" width="33" height="32" viewBox="0 0 33 32"
-                                fill="currentColor" class="clip">
-                                <defs>
-                                    <clipPath id="tgClip">
-                                        <path
-                                            d="M30.2434 6.16308L26.0184 26.0881C25.6994 27.4941 24.8684 27.8441 23.6874 27.1821L17.2494 22.4381L14.1434 25.4261C13.7994 25.7701 13.5124 26.0571 12.8494 26.0571L13.3124 19.5011L25.2434 8.72009C25.7624 8.25809 25.1304 8.00108 24.4374 8.46408L9.68741 17.7521L3.33741 15.7641C1.95641 15.3331 1.93141 14.3831 3.62541 13.7201L28.4624 4.15109C29.6124 3.72009 30.6184 4.40708 30.2434 6.16408V6.16308Z"
-                                            fill="currentColor"></path>
-                                    </clipPath>
-                                </defs>
-                                <path
-                                    d="M30.2434 6.16308L26.0184 26.0881C25.6994 27.4941 24.8684 27.8441 23.6874 27.1821L17.2494 22.4381L14.1434 25.4261C13.7994 25.7701 13.5124 26.0571 12.8494 26.0571L13.3124 19.5011L25.2434 8.72009C25.7624 8.25809 25.1304 8.00108 24.4374 8.46408L9.68741 17.7521L3.33741 15.7641C1.95641 15.3331 1.93141 14.3831 3.62541 13.7201L28.4624 4.15109C29.6124 3.72009 30.6184 4.40708 30.2434 6.16408V6.16308Z"
-                                    fill="currentColor"></path>
-                            </svg></a>&nbsp; Telegram</a></nav>
-            </div>
-        </article>
-    </section>
+
     <h2 id="concept">Following <strong class="text-primary">blockchain</strong> values</h2>
+    <section class="container">
+            <p class="text-larger">
+                At P2P Cloud, we follow the values of the blockchain – security, censorship resistance, and anonymity. Here's what you can expect:
+            </p>
+    </section>
+
     <section class="cols col-3 container">
         <article class="lg gradient-1">
             <figure><img alt="Vpn" src="/img/mainpage/secure.svg"></figure>
             <h3>Secure</h3>
-            <p><span class="text-blue">No one but you has access to your VM or your data.</span>
-                We will never request nor change your keys as we cannot see them, ever.
-                What you do with your data is your business, not ours, not the government's,
-                not Big Tech's.</p>
+            <p>
+                No one but you has access to your VM or your data. 
+                <br>
+                <br> 
+                We will never request or change your keys – 
+                <span class="text-blue"> what you do with your data is your business.</span>
+            </p>
         </article>
         <article class="lg gradient-1">
             <figure><img alt="Censorship" src="/img/mainpage/censorship.svg"></figure>
             <h3>Censorship resistant</h3>
             <p><span class="text-cyan">Not controlled by a monolithic corporation.</span>
-                Decentralized ownership. You alone have access to your keys.</p>
-            <p>Your data is hidden from everyone but you. The infrastructure is
-                spread around the globe. Don't be like Parlor.</p>
+                Because the data on each server is encrypted by nature, the server provider cannot stop or read any data stored on the hardware and stop service because of how the hardware is being utilized.</p>
+           
         </article>
         <article class="lg gradient-1">
             <figure><img alt="Anonymous" src="/img/mainpage/anonymous.svg"></figure>
             <h3>Anonymous</h3>
-            <p><span class="text-magenta">Hosting provider has only your blockchain address.</span>
-                Keep your name and billing address to yourself. We can't interact with
-                your machines at all.</p>
-            <p>P2PCloud is just a VM broker; It sees nothing and knows nothing
-                about you or your VMs.</p>
+            <p>
+                P2P Cloud is just a VM broker that automates every interaction via a smart contract to facilitate transactions and initiate the attestation process. 
+                <span class="text-magenta"> The hosting provider has only your blockchain address</span>, so you can stay anonymous.
+            </p>
+
         </article>
     </section>
     <h2 id="book">Way to <strong class="text-primary">book</strong> and
