--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,7 +24,7 @@
     </section>
     <h2 id="promo-video" class="text-center">P2P Cloud in <strong class="text-primary">60 seconds</strong></h2>
     <section class="container">
-        <div style="--aspect-ratio:1.76991;"><iframe title="October 28, 2022" width="1000" height="500" allowfullscreen="" src="https://www.youtube.com/embed/iJrVOTX2jC4?autoplay=$0&amp;rel=0"
+        <div style="--aspect-ratio:1.76991;"><iframe class="mainpage__video" title="October 28, 2022" width="1000" height="500" allowfullscreen="" src="https://www.youtube.com/embed/iJrVOTX2jC4?autoplay=$0&amp;rel=0"
                 allow="autoplay; picture-in-picture; clipboard-write"></iframe></div>
     </section>
     <h2 id="how-it-works" class="text-center">What Makes P2P Cloud<strong class="text-primary">Unique</strong></h2>
