--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -24,15 +24,28 @@
 
 <body>
     <header class="cols container header">
-        <a id="logo" alt="p2pcloud" data-sveltekit-reload="" href="/" class="svelte-1uzzcqz">p2pcloud</a>
+        <a id="logo" alt="p2pcloud" href="/">p2pcloud</a>
         <menu class="dropdown topmenu">
-            <button id="menu" class="action icon icon-apps svelte-1orqnzs"></button>
+            <button id="menu" class="action icon icon-apps"></button>
             <nav class="cols nav">
-                <a href="/docs" data-sveltekit-reload="" class="svelte-1orqnzs active">Docs </a>
-                <a href="https://t.me/p2pcloud" data-sveltekit-reload="" class="svelte-1orqnzs">Join our Telegram </a>
-                <a href="/docs/overview/getting-started/" data-sveltekit-reload="" class="svelte-1orqnzs">Get started </a>
+                <a href="/docs/overview/getting-started/" class="">Docs </a>
+                <a href="https://t.me/p2pcloud">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="33" height="32" viewBox="0 0 33 32" fill="#fff">
+                        <defs>
+                            <clipPath id="tgClip">
+                                <path
+                                    d="M30.2434 6.16308L26.0184 26.0881C25.6994 27.4941 24.8684 27.8441 23.6874 27.1821L17.2494 22.4381L14.1434 25.4261C13.7994 25.7701 13.5124 26.0571 12.8494 26.0571L13.3124 19.5011L25.2434 8.72009C25.7624 8.25809 25.1304 8.00108 24.4374 8.46408L9.68741 17.7521L3.33741 15.7641C1.95641 15.3331 1.93141 14.3831 3.62541 13.7201L28.4624 4.15109C29.6124 3.72009 30.6184 4.40708 30.2434 6.16408V6.16308Z"
+                                    fill="currentColor"></path>
+                            </clipPath>
+                        </defs>
+                        <path
+                            d="M30.2434 6.16308L26.0184 26.0881C25.6994 27.4941 24.8684 27.8441 23.6874 27.1821L17.2494 22.4381L14.1434 25.4261C13.7994 25.7701 13.5124 26.0571 12.8494 26.0571L13.3124 19.5011L25.2434 8.72009C25.7624 8.25809 25.1304 8.00108 24.4374 8.46408L9.68741 17.7521L3.33741 15.7641C1.95641 15.3331 1.93141 14.3831 3.62541 13.7201L28.4624 4.15109C29.6124 3.72009 30.6184 4.40708 30.2434 6.16408V6.16308Z"
+                            fill="currentColor"></path>
+                    </svg>
+                </a>
+                <a href="https://github.com/p2pcloud/website" target="_blank">Github</a>
             </nav>
-        </menu> <a class="button primary svelte-13ihuot" href="/panel#!/vms">App</a>
+        </menu> <a class="button primary" href="/panel#!/vms">App</a>
     </header>
     {{ block "main" . }}
     {{ .Content }}
