--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,8 @@
             <div><small class="label">Peer-To-Peer servers marketplace on Avalanche blockchain</small>
                 <h1>Rent servers<br>
                     on <strong class="text-primary">blockchain</strong> <br> <sub>anonymous • secure • zero-trust</sub></h1>
-                <nav class="cols"><a class="button lg primary" href="/docs/overview/getting-started">Get started</a> <a class="button lg" href="#marketplace"><i class="icon icon-time"></i>Offers</a>
+                <nav class="cols">
+                    <a class="button lg primary" href="/docs/overview/getting-started">Get started</a>
                 </nav>
             </div>
             <figure><img alt="cubes" src="/img/mainpage/chain.png"></figure>
@@ -24,8 +25,8 @@
     </section>
     <h2 id="promo-video" class="text-center">P2P Cloud in <strong class="text-primary">60 seconds</strong></h2>
     <section class="container">
-        <div style="--aspect-ratio:1.76991;"><iframe class="mainpage__video" title="October 28, 2022" width="1000" height="500" allowfullscreen="" src="https://www.youtube.com/embed/iJrVOTX2jC4?autoplay=$0&amp;rel=0"
-                allow="autoplay; picture-in-picture; clipboard-write"></iframe></div>
+        <div style="--aspect-ratio:1.76991;"><iframe class="mainpage__video" title="October 28, 2022" width="1000" height="500" allowfullscreen=""
+                src="https://www.youtube.com/embed/iJrVOTX2jC4?autoplay=$0&amp;rel=0" allow="autoplay; picture-in-picture; clipboard-write"></iframe></div>
     </section>
     <h2 id="how-it-works" class="text-center">What Makes P2P Cloud<strong class="text-primary">Unique</strong></h2>
 
@@ -36,14 +37,15 @@
         <figure>
             <img src="/img/mainpage/oldsoft.svg" alt="oldsoft">
             <figcaption class="article gradient-1">
-                P2P Cloud virtual machines are just regular Linux boxes – but with a difference. We use state-of-the-art encryption and decentralized infrastructure to keep your data secure and private. 
+                P2P Cloud virtual machines are just regular Linux boxes – but with a difference. We use state-of-the-art encryption and decentralized infrastructure to keep your data secure and
+                private.
                 <br>
                 <br>
                 Deploy a crypto node, NodeJS full-stack app, or 20-year-old Java application – it's just a Linux VM in the end. Our supported distros are Ubuntu 22.04 and Alpine 3.16.
             </figcaption>
         </figure>
     </section>
-    
+
     </section>
     <h2 id="marketplace">Open <strong class="text-primary">marketplace</strong></h2>
     <section class="container">
@@ -57,9 +59,9 @@
 
     <h2 id="concept">Following <strong class="text-primary">blockchain</strong> values</h2>
     <section class="container">
-            <p class="text-larger">
-                At P2P Cloud, we follow the values of the blockchain – security, censorship resistance, and anonymity. Here's what you can expect:
-            </p>
+        <p class="text-larger">
+            At P2P Cloud, we follow the values of the blockchain – security, censorship resistance, and anonymity. Here's what you can expect:
+        </p>
     </section>
 
     <section class="cols col-3 container">
@@ -67,10 +69,10 @@
             <figure><img alt="Vpn" src="/img/mainpage/secure.svg"></figure>
             <h3>Secure</h3>
             <p>
-                No one but you has access to your VM or your data. 
+                No one but you has access to your VM or your data.
                 <br>
-                <br> 
-                We will never request or change your keys – 
+                <br>
+                We will never request or change your keys –
                 <span class="text-blue"> what you do with your data is your business.</span>
             </p>
         </article>
@@ -78,14 +80,15 @@
             <figure><img alt="Censorship" src="/img/mainpage/censorship.svg"></figure>
             <h3>Censorship resistant</h3>
             <p><span class="text-cyan">Not controlled by a monolithic corporation.</span>
-                Because the data on each server is encrypted by nature, the server provider cannot stop or read any data stored on the hardware and stop service because of how the hardware is being utilized.</p>
-           
+                Because the data on each server is encrypted by nature, the server provider cannot stop or read any data stored on the hardware and stop service because of how the hardware is being
+                utilized.</p>
+
         </article>
         <article class="lg gradient-1">
             <figure><img alt="Anonymous" src="/img/mainpage/anonymous.svg"></figure>
             <h3>Anonymous</h3>
             <p>
-                P2P Cloud is just a VM broker that automates every interaction via a smart contract to facilitate transactions and initiate the attestation process. 
+                P2P Cloud is just a VM broker that automates every interaction via a smart contract to facilitate transactions and initiate the attestation process.
                 <span class="text-magenta"> The hosting provider has only your blockchain address</span>, so you can stay anonymous.
             </p>
 
@@ -119,20 +122,25 @@
                 in <strong class="text-primary">Telegram</strong></h2>
             <div>
                 <p>Join our movement of changing the current cloud market</p>
-                <nav class="cols middle"><a class="button lg primary" href="/docs/overview/getting-started">Get started</a> <a class="button lg link svg" href="http://t.me/p2pcloud"><a id="tg"
-                            title="Join us in telegram" href="http://t.me/p2pcloud" target="explorer"><svg xmlns="http://www.w3.org/2000/svg" width="33" height="32" viewBox="0 0 33 32"
-                                fill="currentColor" class="clip">
-                                <defs>
-                                    <clipPath id="tgClip">
-                                        <path
-                                            d="M30.2434 6.16308L26.0184 26.0881C25.6994 27.4941 24.8684 27.8441 23.6874 27.1821L17.2494 22.4381L14.1434 25.4261C13.7994 25.7701 13.5124 26.0571 12.8494 26.0571L13.3124 19.5011L25.2434 8.72009C25.7624 8.25809 25.1304 8.00108 24.4374 8.46408L9.68741 17.7521L3.33741 15.7641C1.95641 15.3331 1.93141 14.3831 3.62541 13.7201L28.4624 4.15109C29.6124 3.72009 30.6184 4.40708 30.2434 6.16408V6.16308Z"
-                                            fill="currentColor"></path>
-                                    </clipPath>
-                                </defs>
-                                <path
-                                    d="M30.2434 6.16308L26.0184 26.0881C25.6994 27.4941 24.8684 27.8441 23.6874 27.1821L17.2494 22.4381L14.1434 25.4261C13.7994 25.7701 13.5124 26.0571 12.8494 26.0571L13.3124 19.5011L25.2434 8.72009C25.7624 8.25809 25.1304 8.00108 24.4374 8.46408L9.68741 17.7521L3.33741 15.7641C1.95641 15.3331 1.93141 14.3831 3.62541 13.7201L28.4624 4.15109C29.6124 3.72009 30.6184 4.40708 30.2434 6.16408V6.16308Z"
-                                    fill="currentColor"></path>
-                            </svg></a>&nbsp; Telegram</a></nav>
+                <nav class="cols middle">
+                    <a class="button lg primary" href="/docs/overview/getting-started">Get started</a>
+                    <a class="button lg link svg" href="http://t.me/p2pcloud">
+
+                        <svg xmlns="http://www.w3.org/2000/svg" width="33" height="32" viewBox="0 0 33 32" fill="#fff">
+                            <defs>
+                                <clipPath id="tgClip">
+                                    <path
+                                        d="M30.2434 6.16308L26.0184 26.0881C25.6994 27.4941 24.8684 27.8441 23.6874 27.1821L17.2494 22.4381L14.1434 25.4261C13.7994 25.7701 13.5124 26.0571 12.8494 26.0571L13.3124 19.5011L25.2434 8.72009C25.7624 8.25809 25.1304 8.00108 24.4374 8.46408L9.68741 17.7521L3.33741 15.7641C1.95641 15.3331 1.93141 14.3831 3.62541 13.7201L28.4624 4.15109C29.6124 3.72009 30.6184 4.40708 30.2434 6.16408V6.16308Z"
+                                        fill="currentColor"></path>
+                                </clipPath>
+                            </defs>
+                            <path
+                                d="M30.2434 6.16308L26.0184 26.0881C25.6994 27.4941 24.8684 27.8441 23.6874 27.1821L17.2494 22.4381L14.1434 25.4261C13.7994 25.7701 13.5124 26.0571 12.8494 26.0571L13.3124 19.5011L25.2434 8.72009C25.7624 8.25809 25.1304 8.00108 24.4374 8.46408L9.68741 17.7521L3.33741 15.7641C1.95641 15.3331 1.93141 14.3831 3.62541 13.7201L28.4624 4.15109C29.6124 3.72009 30.6184 4.40708 30.2434 6.16408V6.16308Z"
+                                fill="currentColor"></path>
+                        </svg>
+                        &nbsp; Telegram
+                    </a>
+                </nav>
             </div>
         </article>
     </section>
