main page links

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -35,7 +35,7 @@
 <body>
     <header class="header">
         <div class="container header__container">
-            <a class="header__container-logo" href="/#"><img src="./img/mainpage/logo.svg" alt="logo"></a>
+            <a class="header__container-logo" href="/#"><img src="/img/mainpage/logo.svg" alt="logo"></a>
             <nav class="header__container-nav">
                 <div class="header__container-nav__social">
                     <a class="header__container-nav__social-icon" href="/#">
@@ -55,15 +55,15 @@
                 </div>
                 <div class="header__container-nav__border"></div>
                 <ul class="header__container-nav__list">
-                    <li class="header__container-nav__list-item active"><a class="header__container-nav__list-item__link" href="/index.html">Main</a></li>
-                    <li class="header__container-nav__list-item"><a class="header__container-nav__list-item__link" href="/docs.html">Docs</a></li>
-                    <li class="header__container-nav__list-item"><a class="header__container-nav__list-item__link" href="/#">Github</a></li>
+                    <li class="header__container-nav__list-item active"><a class="header__container-nav__list-item__link" href="/">Main</a></li>
+                    <li class="header__container-nav__list-item"><a class="header__container-nav__list-item__link" href="/docs/developer-hub/developer-quick-start/">Docs</a></li>
+                    <li class="header__container-nav__list-item"><a class="header__container-nav__list-item__link" href="https://github.com/p2pcloud/website" target="_blank">Github</a></li>
                 </ul>
                 <div class="header__container-nav__btn">
-                    <button class="header__container-nav__btn-button">App</button>
+                    <button class="header__container-nav__btn-button" onclick="gtag('event','app_button')">App</button>
                 </div>
             </nav>
-            <div class="header__container-menu">
+            <div class=" header__container-menu">
                 <span class="header__container-menu__burger"></span>
             </div>
             <div class="menu">
