--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,19 +7,19 @@
                     <h1 class="hero__container-content__title">Rent servers on <span class="text-gradient">blockchain</span></h1>
                     <p class="hero__container-content__desc">Peer-To-Peer servers marketplace on&nbsp;Avalanche blockchain</p>
                     <div class="hero__container-content__info">
-                        <p class="hero__container-content__info-icon"><img src="./img/mainpage/shield.svg" alt="shield">Secure</p>
-                        <p class="hero__container-content__info-icon"><img src="./img/mainpage/lock.svg" alt="lock">Zero-trust</p>
-                        <p class="hero__container-content__info-icon"><img src="./img/mainpage/eye.svg" alt="eye">Anonymous</p>
+                        <p class="hero__container-content__info-icon"><img src="/img/mainpage/shield.svg" alt="shield">Secure</p>
+                        <p class="hero__container-content__info-icon"><img src="/img/mainpage/lock.svg" alt="lock">Zero-trust</p>
+                        <p class="hero__container-content__info-icon"><img src="/img/mainpage/eye.svg" alt="eye">Anonymous</p>
                     </div>
-                    <button class="btn-gradient">Get started</button>
+                    <a class="btn-gradient" href="/docs/developer-hub/developer-quick-start/">Get started</a>
                 </div>
                 <div class="hero__container-content__img">
-                    <img src="./img/mainpage/hero.png" alt="hero">
+                    <img src="/img/mainpage/hero.png" alt="hero">
                 </div>
             </div>
             <div class="hero__container-article">
                 <div class="hero__container-article-img">
-                    <img src="./img/mainpage/com.svg" alt="com">
+                    <img src="/img/mainpage/com.svg" alt="com">
                 </div>
                 <div class="hero__container-article__content">
                     <h4 class="hero__container-article__content-title">TLDR</h4>
@@ -28,7 +28,7 @@
                     </p>
                 </div>
                 <div class="hero__container-article__img">
-                    <img src="./img/mainpage/bg-grid.png" alt="grid">
+                    <img src="/img/mainpage/bg-grid.png" alt="grid">
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
         <div class="container unique__container">
             <h2 class="unique__container-title">What Makes P2P Cloud <span class="text-gradient">Unique</span></h2>
             <div class="unique__container-content">
-                <img src="./img/mainpage/unique.png" alt="unique">
+                <img src="/img/mainpage/unique.png" alt="unique">
                 <div class="unique__container-content__text">
                     <h4 class="unique__container-content__text-title">Decentralized infrastructure for your software</h4>
                     <p class="unique__container-content__text-desc">P2P Cloud virtual machines are just regular Linux boxes – but with a difference. We use state-of-the-art encryption and
@@ -65,7 +65,7 @@
                         platform with direct competition. Full encryption and blockchain make open competition possible.</p>
                     <p class="unique__container-card__desc">Every booking, every complaint on&nbsp;hosting provider is on the blockchain, accessible on the ledger.</p>
                     <div class="unique__container-card__img">
-                        <img src="./img/mainpage/unique-two.png" alt="unique">
+                        <img src="/img/mainpage/unique-two.png" alt="unique">
                     </div>
                 </div>
             </div>
@@ -78,18 +78,18 @@
             <p class="values__container-desc">At P2P Cloud, we follow the values of the blockchain – security, censorship resistance, and&nbsp;anonymity. Here's what you can expect:</p>
             <div class="values__container-cards">
                 <div class="values__container-cards__card">
-                    <img src="./img/mainpage/shield-card.svg" alt="shield">
+                    <img src="/img/mainpage/shield-card.svg" alt="shield">
                     <p>Secure</p>
                     <p>No one but you has access to your VM or your data.We will never request or change your keys – what you do with your data is your business.</p>
                 </div>
                 <div class="values__container-cards__card">
-                    <img src="./img/mainpage/lock-card.svg" alt="lock">
+                    <img src="/img/mainpage/lock-card.svg" alt="lock">
                     <p>Censorship resistant</p>
                     <p>Not controlled by a monolithic corporation. Because the data on each server is encrypted by nature, the server provider cannot stop or read any data stored on the hardware and
                         stop service because of how the hardware is being utilized.</p>
                 </div>
                 <div class="values__container-cards__card">
-                    <img src="./img/mainpage/eye-card.svg" alt="eye">
+                    <img src="/img/mainpage/eye-card.svg" alt="eye">
                     <p>Secure</p>
                     <p>P2P Cloud is just a VM broker that automates every interaction via a smart contract to facilitate transactions and initiate the attestation process. The hosting provider has
                         only your blockchain address, so you can stay anonymous.</p>
@@ -105,10 +105,10 @@
                 <div class="changing__container-content">
                     <h3 class="changing__container-content__title">Join our movement of changing <span class="text-gradient">the current cloud market</span></h3>
                     <div class="changing__container-content__btn">
-                        <button class="btn-gradient-two">Get started</button>
+                        <a class="btn-gradient-two" href="/docs/developer-hub/developer-quick-start/">Get started</a>
                         <div class="changing__container-content__btn-ghost">
                             <button class="changing__container-content__btn-ghost-btn">
-                                <div>Join Telegram community</div>
+                                <a href="http://t.me/p2pcloud" target="_blank">Join Telegram community</a>
                                 <svg width="22" height="18" viewBox="0 0 22 18" fill="#ffffff" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd"
                                         d="M18.0284 17.5858L21.6075 0.77974C21.6838 0.403928 21.3146 0.09499 20.9614 0.233918L1.20419 7.7657C0.803653 7.92017 0.799415 8.53757 1.18629 8.71417L6.24633 10.7924L8.13199 16.7338C8.24407 17.056 8.64437 17.1586 8.90151 16.9415L11.7964 14.2463L17.2993 17.899C17.5876 18.0779 17.9615 17.915 18.0284 17.5858ZM9.06212 11.915L8.74235 14.9686L7.21226 10.2686L17.9855 3.19318L9.06212 11.915Z">
