--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,21 +5,21 @@
             <div class="hero__container-main">
                 <div class="hero__container-content">
                     <h1 class="hero__container-content__title">Rent servers on <span class="text-gradient">blockchain</span></h1>
-                    <p class="hero__container-content__desc">Peer-To-Peer servers marketplace on&nbsp;Avalanche blockchain</p>
+                    <p class="hero__container-content__desc">Peer-To-Peer servers marketplace on Avalanche blockchain</p>
                     <div class="hero__container-content__info">
-                        <p class="hero__container-content__info-icon"><img src="/img/mainpage/shield.svg" alt="shield">Secure</p>
-                        <p class="hero__container-content__info-icon"><img src="/img/mainpage/lock.svg" alt="lock">Zero-trust</p>
-                        <p class="hero__container-content__info-icon"><img src="/img/mainpage/eye.svg" alt="eye">Anonymous</p>
+                        <p class="hero__container-content__info-icon"><img src="./design/img/shield.svg" alt="shield">Secure</p>
+                        <p class="hero__container-content__info-icon"><img src="./design/img/lock.svg" alt="lock">Zero-trust</p>
+                        <p class="hero__container-content__info-icon"><img src="./design/img/eye.svg" alt="eye">Anonymous</p>
                     </div>
                     <a class="btn-gradient" href="/docs/developer-hub/developer-quick-start/">Get started</a>
                 </div>
                 <div class="hero__container-content__img">
-                    <img src="/img/mainpage/hero.png" alt="hero">
+                    <img src="./design/img/hero.png" alt="hero">
                 </div>
             </div>
             <div class="hero__container-article">
                 <div class="hero__container-article-img">
-                    <img src="/img/mainpage/com.svg" alt="com">
+                    <img src="./design/img/com.svg" alt="com">
                 </div>
                 <div class="hero__container-article__content">
                     <h4 class="hero__container-article__content-title">TLDR</h4>
@@ -28,7 +28,7 @@
                     </p>
                 </div>
                 <div class="hero__container-article__img">
-                    <img src="/img/mainpage/bg-grid.png" alt="grid">
+                    <img src="./design/img/bg-grid.png" alt="grid">
                 </div>
             </div>
         </div>
@@ -38,8 +38,8 @@
         <div class="container seconds__container">
             <h2 class="seconds__container-title">P2P Cloud <span class="text-gradient">in 60 seconds</span></h2>
 
-            <iframe class="seconds__container-video" src="https://www.youtube.com/embed/iJrVOTX2jC4" frameborder="0">
 
+            <iframe class="seconds__container-video" src="https://www.youtube.com/embed/iJrVOTX2jC4?autoplay=1">
             </iframe>
         </div>
     </section>
@@ -49,7 +49,7 @@
         <div class="container unique__container">
             <h2 class="unique__container-title">What Makes P2P Cloud <span class="text-gradient">Unique</span></h2>
             <div class="unique__container-content">
-                <img src="/img/mainpage/unique.png" alt="unique">
+                <img src="./design/img/unique.png" alt="unique">
                 <div class="unique__container-content__text">
                     <h4 class="unique__container-content__text-title">Decentralized infrastructure for your software</h4>
                     <p class="unique__container-content__text-desc">P2P Cloud virtual machines are just regular Linux boxes – but with a difference. We use state-of-the-art encryption and
@@ -63,9 +63,9 @@
                     <h3 class="unique__container-card__title">Open <span class="text-gradient">marketplace</span></h3>
                     <p class="unique__container-card__desc">The Big Tech trio (Amazon, Google, and Microsoft) controls 65% of the market and dictates the prices. P2P Cloud is an open marketplace
                         platform with direct competition. Full encryption and blockchain make open competition possible.</p>
-                    <p class="unique__container-card__desc">Every booking, every complaint on&nbsp;hosting provider is on the blockchain, accessible on the ledger.</p>
+                    <p class="unique__container-card__desc">Every booking, every complaint on hosting provider is on the blockchain, accessible on the ledger.</p>
                     <div class="unique__container-card__img">
-                        <img src="/img/mainpage/unique-two.png" alt="unique">
+                        <img src="./design/img/unique-two.png" alt="unique">
                     </div>
                 </div>
             </div>
@@ -75,21 +75,21 @@
     <section class="values">
         <div class="container values__container">
             <h2 class="values__container-title">Following <span class="text-gradient">blockchain</span> values</h2>
-            <p class="values__container-desc">At P2P Cloud, we follow the values of the blockchain – security, censorship resistance, and&nbsp;anonymity. Here's what you can expect:</p>
+            <p class="values__container-desc">At P2P Cloud, we follow the values of the blockchain – security, censorship resistance, and anonymity. Here's what you can expect:</p>
             <div class="values__container-cards">
                 <div class="values__container-cards__card">
-                    <img src="/img/mainpage/shield-card.svg" alt="shield">
+                    <img src="./design/img/shield-card.svg" alt="shield">
                     <p>Secure</p>
                     <p>No one but you has access to your VM or your data.We will never request or change your keys – what you do with your data is your business.</p>
                 </div>
                 <div class="values__container-cards__card">
-                    <img src="/img/mainpage/lock-card.svg" alt="lock">
+                    <img src="./design/img/lock-card.svg" alt="lock">
                     <p>Censorship resistant</p>
                     <p>Not controlled by a monolithic corporation. Because the data on each server is encrypted by nature, the server provider cannot stop or read any data stored on the hardware and
                         stop service because of how the hardware is being utilized.</p>
                 </div>
                 <div class="values__container-cards__card">
-                    <img src="/img/mainpage/eye-card.svg" alt="eye">
+                    <img src="./design/img/eye-card.svg" alt="eye">
                     <p>Secure</p>
                     <p>P2P Cloud is just a VM broker that automates every interaction via a smart contract to facilitate transactions and initiate the attestation process. The hosting provider has
                         only your blockchain address, so you can stay anonymous.</p>
@@ -108,11 +108,12 @@
                         <a class="btn-gradient-two" href="/docs/developer-hub/developer-quick-start/">Get started</a>
                         <div class="changing__container-content__btn-ghost">
                             <button class="changing__container-content__btn-ghost-btn">
-                                <a href="http://t.me/p2pcloud" target="_blank">Join Telegram community</a>
+                                <a href="https://t.me/p2pcloud" target="_blank">
+                                    Join Telegram community
+                                </a>
                                 <svg width="22" height="18" viewBox="0 0 22 18" fill="#ffffff" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M18.0284 17.5858L21.6075 0.77974C21.6838 0.403928 21.3146 0.09499 20.9614 0.233918L1.20419 7.7657C0.803653 7.92017 0.799415 8.53757 1.18629 8.71417L6.24633 10.7924L8.13199 16.7338C8.24407 17.056 8.64437 17.1586 8.90151 16.9415L11.7964 14.2463L17.2993 17.899C17.5876 18.0779 17.9615 17.915 18.0284 17.5858ZM9.06212 11.915L8.74235 14.9686L7.21226 10.2686L17.9855 3.19318L9.06212 11.915Z">
-                                    </path>
+                                        d="M18.0284 17.5858L21.6075 0.77974C21.6838 0.403928 21.3146 0.09499 20.9614 0.233918L1.20419 7.7657C0.803653 7.92017 0.799415 8.53757 1.18629 8.71417L6.24633 10.7924L8.13199 16.7338C8.24407 17.056 8.64437 17.1586 8.90151 16.9415L11.7964 14.2463L17.2993 17.899C17.5876 18.0779 17.9615 17.915 18.0284 17.5858ZM9.06212 11.915L8.74235 14.9686L7.21226 10.2686L17.9855 3.19318L9.06212 11.915Z" />
                                 </svg>
                             </button>
                         </div>
