--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -948,178 +948,6 @@ button {
     }
 }
 
-
-/*****DOCS**********/
-
-.title {
-    font-weight: $bold;
-    font-size: $sizeH3;
-    line-height: 59px;
-    padding-bottom: 25px;
-}
-
-
-.started {
-    margin-bottom: 140px;
-
-    &__container {
-        display: grid;
-        grid-template-columns: 216px 1fr;
-        align-items: flex-start;
-        gap: 60px;
-
-
-        &-main {
-            display: grid;
-            justify-items: flex-start;
-            gap: 50px;
-
-            &__btn {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                gap: 15px;
-                font-weight: $regular;
-                font-size: 16px;
-                line-height: 19px;
-                color: $white-light;
-                border-radius: 6px;
-                border: 1px solid rgba(255, 255, 255, 0.5);
-                padding: 12px 24px;
-                cursor: pointer;
-                -webkit-transition: all .3s linear;
-                transition: all .3s linear;
-
-                &:hover {
-                    color: $black-dark;
-                    background: $white-light;
-                }
-
-                &:hover svg {
-                    fill: $black-dark;
-                }
-            }
-
-            &__title {
-                font-weight: $bold;
-                font-size: $sizeH3;
-                line-height: 59px;
-                padding-bottom: 25px;
-            }
-
-            &__desc {
-                font-weight: $regular;
-                font-size: $size18;
-                line-height: 25px;
-                color: $white-light;
-
-                &>a {
-                    text-decoration: underline;
-                }
-
-                &>a:hover {
-                    color: $blue-light;
-                }
-
-                & span {
-                    font-weight: $bold;
-                    color: $white;
-                }
-            }
-
-            &__block {
-                display: grid;
-                gap: 16px;
-
-                & h1 {
-                    margin-bottom: 34px;
-                }
-
-                & h2 {
-                    margin-bottom: 9px;
-                }
-
-                &-img {
-                    width: 100%;
-                    margin-bottom: 16px;
-                }
-
-                &-img:last-child {
-                    margin-bottom: 0;
-                }
-
-                &-title {
-                    font-weight: $bold;
-                    font-size: $size24;
-                    line-height: 32px;
-                    margin-bottom: 8px;
-                }
-
-                &-desc {
-                    font-weight: $regular;
-                    font-size: $size18;
-                    line-height: 25px;
-                    color: $white-light;
-
-                    &>a {
-                        text-decoration: underline;
-                    }
-
-                    &>a:hover {
-                        color: $blue-light;
-                    }
-
-                    & span {
-                        font-weight: $bold;
-                        color: $white;
-                    }
-                }
-
-                &-desc:nth-child(3) {
-                    margin-bottom: 8px;
-                }
-            }
-        }
-
-
-        &-nav {
-            display: grid;
-            align-content: flex-start;
-            gap: 25px;
-
-            &__list {
-
-                &-item:not(:nth-child(1)) {
-                    padding: 10px 16px;
-                    border-radius: 6px;
-                    font-weight: $regular;
-                    font-size: 16px;
-                    line-height: 21px;
-                    cursor: pointer;
-                }
-
-                &-item-link {
-                    color: $white-light;
-                }
-
-
-                &-item:not(:nth-child(1)):hover a {
-                    color: $gray-dark2;
-                }
-
-                &-item:nth-child(1) {
-                    padding-bottom: 12px;
-                    font-weight: $bold;
-                    font-size: $size18;
-                    line-height: 24px;
-                }
-            }
-        }
-    }
-}
-
-
-
 .border-desc {
     padding: 7px 0 9px 24px;
     border-left: 4px solid $violet;
@@ -1133,7 +961,7 @@ button {
     color: $white;
 }
 
-.started__container-main {
+.docs__container-main {
     display: grid;
     gap: 30px;
 
