--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -56,7 +56,7 @@
                     <!--TODO: add active -->
                     <li class="header__container-nav__list-item "><a class="header__container-nav__list-item__link" href="/">Main</a></li>
                     <li class="header__container-nav__list-item"><a class="header__container-nav__list-item__link" href="/docs/developer-hub/developer-quick-start/">Docs</a></li>
-                    <li class="header__container-nav__list-item"><a class="header__container-nav__list-item__link" href="https://github.com/p2pcloud/website">Github</a></li>
+                    <li class="header__container-nav__list-item"><a class="header__container-nav__list-item__link" href="https://github.com/p2pcloud/website" target="_blank">Github</a></li>
                 </ul>
                 <div class="header__container-nav__btn">
                     <a class="header__container-nav__btn-button" href="/panel.html">App</a>
