--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,7 +2,7 @@
 @import './UI/ui-kit';
 
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&family=Poppins:wght@400;700&family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 * {
     padding: 0;
